Fix #248: Incorrect alignment/centring for React/JSX icon

--- a/styles/icons.less
+++ b/styles/icons.less
@@ -161,7 +161,7 @@
 .lein-icon          { .file-icons; content: "\f105"; left: 3px; }
 .nginx-icon         { .file-icons; content:"\f146b"; font-size: 15px; left: 1px; }
 .node-icon          { .file-icons; content: "\f17b"; font-size: 18px; top: 5px; }
-.react-icon         { .file-icons; content: "\f100"; }
+.react-icon         { .file-icons; content: "\f100"; top: 3px; left: -2px; }
 .tex-icon           { .file-icons; content: "\e600"; font-size: 8px;  top: 0 }
 .maxscript-icon     { .file-icons; content: "\e900"; font-size: 15px; }
 .kivy-icon          { .file-icons; content: "\e901"; font-size: 17px; top: 3px; }
